@@ -1,3 +1,8 @@
+2003-02-13  John Levon  <levon@movementarian.org>
+
+	* dae/opd_image.c: little cleanup and fix error message
+	  to not lie
+
 2003-02-12  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* doc/oprofile.1.in:
